--- a/ks.html
+++ b/ks.html
@@ -8,22 +8,20 @@
  <style type="text/css">
 	body{background:#9198e5;}
 	div.border{
-		width:1100px;
-		height:500px;
+		width:1109.6px;
+		height:509.6px;
 		border:5px solid #000;
 		position:absolute;
-		top:20px;
 		left:180px;
 		box-shadow:6px 8px 6px 6px rgba(0, 0, 0, 0.5);
 		border-radius:10px;
 	}
 	div.buttons{
 		position:absolute;
-		top:0px;
 		left:460px;
 		height:170px;
 		width:500px;
-
+		top:1200px;
 	}
 	input.play{
 		width:140px;
@@ -104,8 +102,18 @@
 		top:80px;
 		left:360px;
 	}
+	    #logo {
+            padding: 10px 5px;
+            background-color: green;
+            color: aliceblue;
+            font-size: 2em;
+            position: absolute;
+            top: 5px;
+            right: 100px;
+        }
 	div.down{
 		position:absolute;
+		margin-top:180px;
 		top:550px;
 		left:0px;
 		height:170px;
@@ -116,34 +124,16 @@
 		font-size:2em;
 		font-style:italic;
 		line-height:50px;}
-	div.h1{
-		position:absolute;
-		left:100px;
-		height:60px;
-		top:180px;
-		}
-	div.h2{
-		position:absolute;
-		right:100px;
-		height:60px;
-		top:180px;
-	} 
-	div.h3{
-		position:absolute;
-		left:550px;
-		height:60px;
-		top:180px;
-	} 
 	div.h4{
 		position:absolute;
-		left:450px;
+		left:420px;
 		height:150px;
-		top:800px;
+		top:1400px;
 	} 
 	video#video{
-		width:800px;
-		height:450px;
-		position:absolute;
+		width:1109.6px;
+		height:509.6px;
+		
 		top:25px;
 		left:150px;}
 	div.num1{
@@ -157,40 +147,57 @@
 	   padding:2px;
 	   font-size:2em;
 	   cursor: pointer;
+	
 	 }
 	 div#stage p:hover{
 	   text-align:left;
 	   background:blue;
 	 }
+	 div#head{
+	 margin-top:-30px;
+	 }
+	 div#head p{
+		font-size:50px;
+		text-align:center;
+		
+	 }
+	 
  </style></head>
   <script src="ks.js"></script>
  <body>
+
+<div id="head" >
+<p>Study System</p>
+<table><tr>
+<td>
+<h1>指导教师：李健宏</h1>
+<img src="li.jpg" width="300" border=0>
+</td>
+<td>
+<h1>组长：吴政霖</h1>
+<img src="wuzl.jpg" width="300" border=0>
+</td>
+<td>
+<h1> 组员：金伟</h1>
+<img src="jinw.jpg" width="300" border=0> 
+</td>
+<td>
+<h1>组员：柴葆明</h1>
+<img src="chaibm.jpg" width="300" border=0>
+</td>
+</tr></table>
+</div>
+
+
   <div class="border" id="stage">
+	<div id="logo" class="">	
+	</div>
         <video id="video"></video>
         <audio id="audio"></audio>
   </div>
-  <div class="down">
-	<div class="h1">
-		<h1>组长：吴政霖</h1>
-	<div class="zhaopian1">
-		<img src="wuzl.jpg" width="300">
-	</div>
-	</div>
-	<div class="h3">
-		<h1>  组员：金伟</h1>
-	<div class="zhaopian3">
-		<img src="jinw.jpg" width="300">
-	</div>
-	</div>
-	 <div class="h2">
-	<h1>组员：柴葆明</h1>
-	<div class="zhaopian2">
-		<img src="chaibm.jpg" width="300">
-	</div>
-  </div>
-   <div class="h4">
-	<h1>江西科技师范大学云宇宙产业学院21计科1班第十组</h1>
-  </div>
+ 
+	
+   
   <div class="buttons" id="UI">
 	<div class="num1" id="currentTime"></div>
 	<input type="button" value="播放" class="play" id="play">
@@ -198,9 +205,11 @@
 	<input type="button" value="上一个" class="pre" id="pre">
 	<input type="button" value="下一个" class="next" id="next">
 	<input type="button" value="切换媒体" class="qh" id="switch">
-	<div class="num2" id="logo"></div>
-  </div>  
+   
  
+  </div>
+  <div class="h4">
+	<h1>江西科技师范大学云宇宙产业学院21计科1班第十组</h1>
   </div>
  </body>
  
@@ -283,9 +292,10 @@
 	  let titles = mediaData.audioFiles[Model.i].titles ;
 	  let time = mediaData.audioFiles[Model.i].time ;
 	  console.log(titles) ;
+	
 	  for(let i=0 ;i< titles.length ; i++){
 	     pDom = document.createElement("p") ;
-         pDom.textContent = titles[i]  ;
+             pDom.textContent = titles[i];
          pDom.onclick = function(){
 		   Model.UI.audioDom.currentTime =  time[i][0] ;
 		   console.log(Model.UI.audioDom.currentTime) ;
